# ProjectStats

./: .gitignore  LICENSE  README.md  pyproject.toml
Frontend/: P1 - Data Panel.xlsm  frmDescriptive.frm  frmDescriptive.frx  frmReadData.frm  frmReadData.frx
src/: config.py  descriptive.py  display.py  main.py  read.py  runs.py
