[project]
name = "projectstats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "seaborn>=0.13.2",
    "watchgod>=0.8.2",
    "xlwings>=0.33.15",
]
